log
Thu 20 Apr 2023 07:05:41 PM UTC: 
 tests:  1|8
total_score: 0/70
31902d4
Thu 20 Apr 2023 07:07:29 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:53: error: expected ‘)’ before ‘;’ token
   41 |   TreeMap * map = (TreeMap*) malloc (sizeof(TreeMap);
      |                                     ~               ^
      |                                                     )
treemap.c:45:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   45 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:41:13: error: unused variable ‘map’ [-Werror=unused-variable]
   41 |   TreeMap * map = (TreeMap*) malloc (sizeof(TreeMap);
      |             ^~~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
d2aaf49
Thu 20 Apr 2023 07:07:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
235017a
Thu 20 Apr 2023 07:09:50 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|7
total_score: 5/70
5c6c54b
Thu 20 Apr 2023 07:39:21 PM UTC: 
 treemap.c | 33 ++++++++++++++++++++++++++++++---
 1 file changed, 30 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c:96:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
   96 | Nota: En este caso, se asume que la estructura Pair ya ha sido definida en algún otro lugar del código.
      |     ^
treemap.c:104:1: error: expected identifier or ‘(’ before ‘}’ token
  104 | }
      | ^
Compilation failed
71aca5a
Thu 20 Apr 2023 07:39:58 PM UTC: 
 treemap.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  6|7
total_score: 5/70
2dca224
Thu 20 Apr 2023 07:40:25 PM UTC: 
 treemap.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  4|7
total_score: 5/70
e5ca1da
Thu 20 Apr 2023 07:44:02 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:83:54: error: ‘TreeNode’ has no member named ‘key’
   83 |         int cmp = tree->lower_than(key, tree->current->key);
      |                                                      ^~
treemap.c:86:33: error: ‘TreeNode’ has no member named ‘value’
   86 |             return tree->current->value;
      |                                 ^~
Compilation failed
783b937
Thu 20 Apr 2023 07:45:30 PM UTC: 
 treemap.c | 16 +---------------
 1 file changed, 1 insertion(+), 15 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:13: error: unused variable ‘nodo’ [-Werror=unused-variable]
   80 |   TreeNode* nodo = tree->root;
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
9149867
Thu 20 Apr 2023 07:47:01 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:36: error: expected expression before ‘,’ token
   81 | int comparacion = tree->lower_than(,key);
      |                                    ^
treemap.c:80:13: error: unused variable ‘nodo’ [-Werror=unused-variable]
   80 |   TreeNode* nodo = tree->root;
      |             ^~~~
treemap.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
   87 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7db2769
Thu 20 Apr 2023 07:47:26 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:36: error: expected expression before ‘,’ token
   82 | int comparacion = tree->lower_than(,key);
      |                                    ^
treemap.c:81:13: error: unused variable ‘nodo’ [-Werror=unused-variable]
   81 |   TreeNode* nodo = tree->root;
      |             ^~~~
treemap.c:88:1: error: control reaches end of non-void function [-Werror=return-type]
   88 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2624a2e
Thu 20 Apr 2023 07:47:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:88:1: error: control reaches end of non-void function [-Werror=return-type]
   88 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0fd8605
Thu 20 Apr 2023 07:51:11 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
3f2284e
Thu 20 Apr 2023 07:52:53 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
0ea8429
Thu 20 Apr 2023 07:54:05 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
b285364
Thu 20 Apr 2023 07:58:01 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
ebbdb66
Thu 20 Apr 2023 07:58:14 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|7
total_score: 5/70
59616c1
Thu 20 Apr 2023 08:00:44 PM UTC: 
 treemap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:99:3: error: ‘else’ without a previous ‘if’
   99 |   else
      |   ^~~~
treemap.c: At top level:
treemap.c:107:3: error: expected identifier or ‘(’ before ‘return’
  107 |   return NULL;
      |   ^~~~~~
treemap.c:108:1: error: expected identifier or ‘(’ before ‘}’ token
  108 | }
      | ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:105:3: error: control reaches end of non-void function [-Werror=return-type]
  105 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
b5ee0ff
